# satellite-contest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gh-pages.yml
algorithm/: prize_simulation.ipynb  pyproject.toml  task.md
color-sorting/: task.md
color-sorting/scripts/: sort_colors.py  sort_colors_cut.py  sort_colors_diagonal.py  sort_colors_diagonal_v2.py  sort_colors_diagonal_v3.py  sort_colors_final.py  sort_colors_full.py  sort_colors_gradient.py  sort_colors_grid.py  sort_colors_human.py  sort_colors_monotonic.py  sort_colors_oklab.py
gift-collections/: task.md
gift-collections/data/: collection_groups.json  gift.json
gift-collections/scripts/: generate_groups_image.py  generate_groups_split.py
research/: contest-answer.md  html-to-figma-tools.md  portals-prize-algorithm-analysis.md
uiux/: README.md  brand.md  brif.md  plan.md  task.md
uiux/assets/: 4752686706.html  backdrops-tgs  colors  colors.css  icons.md  models-tgs  originals  patterns-tgs  svgs
uiux/assets/data/: id-to-name.json  patterns-custom-emoji.json  patterns.json
uiux/assets/figma-ready/: README.md
uiux/assets/models-lottie/desk-calendar/: april.json
uiux/assets/models-lottie/homemade-cake/: angel-cake.json
uiux/assets/models-lottie/ice-cream/: apple-dip.json  berry-split.json
uiux/assets/models-lottie/jolly-chimp/: abubu.json  alarm-ape.json
uiux/research/: chat-feedback.md  ui-audit.md
uiux/research/dev/: lottie-test.html
uiux/solution/: index.html
uiux/solution/final/: bulk.html  index.html  info.html
(+17 files in other folders)
