[project]
name = "portals-prize-simulation"
version = "0.1.0"
description = "Monte Carlo simulation of Portals prize distribution algorithm"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
]

[project.scripts]
simulate = "simulate:main"
